# data-platform

./: .gitignore  GOVERNANCE.md  README.md
.github/: CODEOWNERS
adr/: 0001-contextual-retrieval-code-index.md  0002-versioning-schemas-sources-externes.md
audits/: 2026-06-18-audit-confluence-meteofrance.md  dual-source-targets.yaml  freshness-targets.yaml
catalog/: catalog.yaml  glossary.md
contracts/: _template.odcs.yaml  climato-mariadb.odcs.yaml  climato-mf-timescale.odcs.yaml  dataclimat-socle-stations.odcs.yaml  forums2-ipboard.odcs.yaml  foudre.odcs.yaml  horaire-mf-timescale.odcs.yaml  hydro-eaufrance-vigicrues.odcs.yaml  infrahoraire-mf.odcs.yaml  mf-data-fallback.odcs.yaml  modeles-nwp-fichiers.odcs.yaml  opendata-export.odcs.yaml  (+31 more)
tools/: .env.ini.template  .gitignore  README.md  build_rgpd_register.py  check_dual_source.py  check_freshness.py  check_license_conformity.py  check_schema_mariadb.py  datastore_inventory.sh  introspect_runbook.md  lineage_forward.py  lineage_run.py  pyproject.toml  reconcile.py  test_contracts.sh  volumetrie_audit.py
tools/code_index/: README.md  __init__.py  chunk.py  chunk_ast.py  config.py  context.py  embed.py  graph.py  index.py  manifest.yaml  meta.py  rewrite.py  search.py  store.py  tsutil.py  walk.py
tools/marquez/: README.md  docker-compose.yml
tools/tests/: test_code_index_chunk.py  test_code_index_context.py  test_code_index_embed.py  test_code_index_graph.py  test_code_index_meta.py  test_code_index_rewrite.py  test_code_index_search.py  test_code_index_store.py  test_code_index_walk.py  test_reconcile.py
(+35 files in other folders)
