[project]
name = "infoclimat-data-platform-tools"
version = "0.1.0"
description = "Outillage de gouvernance data Infoclimat (audit volumétrie, catalogue, lineage)"
requires-python = ">=3.10"
dependencies = [
  "pymysql>=1.1",
  "psycopg[binary]>=3.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
contracts = [
  "datacontract-cli>=0.10",
]
code-index = [
  "mistralai>=2.4",
  "lancedb>=0.13",
  "tree-sitter-language-pack>=0.9",   # chunking AST (frontières fonction/classe) PHP/Python/TS/JS
]

[tool.setuptools]
py-modules = ["volumetrie_audit", "lineage_run", "lineage_forward"]
